[project]
name = "dhlab-mcp"
version = "0.1.0"
description = "MCP server providing access to DHLAB (National Library of Norway Digital Humanities Lab) functionality"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "dhlab>=2.41.0",
    "pandas",
]

[project.scripts]
dhlab-mcp = "dhlab_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
